crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D100_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
[D100]: Missing docstring in public module
 --> D.py:1:1
  |
1 | # No docstring, so we can test D100
  | ^
2 | from functools import wraps
3 | import os
  |
