crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D101_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D101 Missing docstring in public class
  --> D.py:15:7
   |
15 | class class_:
   |       ^^^^^^
   |
