crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D102_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D102 Missing docstring in public method
  --> D.py:23:9
   |
23 |     def method(self=None):
   |         ^^^^^^
   |

D102 Missing docstring in public method
  --> D.py:56:9
   |
56 |     def __new__(self=None):
   |         ^^^^^^^
   |

D102 Missing docstring in public method
  --> D.py:68:9
   |
68 |     def __call__(self=None, x=None, y=None, z=None):
   |         ^^^^^^^^
   |

D102 Missing docstring in public method
   --> D.py:650:9
    |
650 |     def sort_services(self):
    |         ^^^^^^^^^^^^^
    |

D102 Missing docstring in public method
   --> D.py:659:9
    |
659 |     def sort_services(self):
    |         ^^^^^^^^^^^^^
    |
