crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D103_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D103 Missing docstring in public function
   --> D.py:400:5
    |
400 | def oneliner_d102(): return
    |     ^^^^^^^^^^^^^
    |
