crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D107_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D107 Missing docstring in `__init__`
  --> D.py:60:9
   |
60 |     def __init__(self=None):
   |         ^^^^^^^^
   |

D107 Missing docstring in `__init__`
   --> D.py:534:9
    |
534 |     def __init__(self, x):
    |         ^^^^^^^^
    |
