crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D202_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D202 [*] No blank lines allowed after function docstring (found 1)
   --> D.py:142:5
    |
140 | @expect('D202: No blank lines allowed after function docstring (found 1)')
141 | def trailing_space():
142 |     """Leading space."""
    |     ^^^^^^^^^^^^^^^^^^^^
143 |
144 |     pass
    |
help: Remove blank line(s) after function docstring
    |
142 |     """Leading space."""
    |

D202 [*] No blank lines allowed after function docstring (found 1)
   --> D.py:151:5
    |
149 | def trailing_and_leading_space():
150 |
151 |     """Trailing and leading space."""
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
152 |
153 |     pass
    |
help: Remove blank line(s) after function docstring
    |
151 |     """Trailing and leading space."""
    |

D202 [*] No blank lines allowed after function docstring (found 1)
   --> D.py:555:5
    |
553 |   @expect('D213: Multi-line docstring summary should start at the second line')
554 |   def multiline_trailing_space():
555 | /     """Leading space.
556 | |
557 | |     More content.
558 | |     """
    | |_______^
559 |
560 |       pass
    |
help: Remove blank line(s) after function docstring
    |
558 |     """
    |

D202 [*] No blank lines allowed after function docstring (found 1)
   --> D.py:568:5
    |
566 |   def multiline_trailing_and_leading_space():
567 |
568 | /     """Trailing and leading space.
569 | |
570 | |     More content.
571 | |     """
    | |_______^
572 |
573 |       pass
    |
help: Remove blank line(s) after function docstring
    |
571 |     """
    |

D202 No blank lines allowed after function docstring (found 1)
   --> D.py:729:5
    |
727 | def line_continuation_chars():\
728 |
729 |     """No fix should be offered for D201/D202 because of the line continuation chars."""\
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
730 |
731 |     ...
    |
help: Remove blank line(s) after function docstring
